Authentication and user authorization, Work with forms.

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -21,6 +21,14 @@
                     <li><a href="{% url 'index' %}">Home</a></li>
                     <li><a href="{% url 'books' %}">All Books</a></li>
                     <li><a href="{% url 'authors' %}">All Authors</a></li>
+                    <br>
+                    {% if user.is_authenticated %}
+                       <li>User: {{ user.get_username }}</li>
+                       <li><a href="{% url 'my-borrowed' %}">My-borrowed</a></li>
+                       <li><a href="{% url 'logout' %}?next={{ request.path }}">logout</a></li>
+                    {% else %}
+                       <li><a href="{% url 'login' %}?next={{ request.path }}">login</a></li>
+                    {% endif %}
                 </ul>
                 {% endblock %}
             </div>
